<resources>
    <string name="app_name">Safra</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="lorem_ipsum" translatable="false">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type.
    </string>
    <string name="mandatory_field" translatable="false">\u0020*</string>
    <string name="_0" translatable="false">0</string>
    <string name="text_field">Text Field</string>
    <string name="email_field">Email Field</string>
    <string name="password_field">Password Field</string>
    <string name="telephone_field">Telephone Field</string>
    <string name="month_field">Month Field</string>
    <string name="week_field">Week Field</string>
    <string name="date_time">DateTime</string>
    <string name="time_field">Time Field</string>
    <string name="location_field">Location Field</string>
    <string name="date_field">Date Field</string>
    <string name="file_field">File Field</string>
    <string name="text_area_field">Textarea Field</string>
    <string name="number_field">Number Field</string>
    <string name="checkbox_field">Checkbox Field</string>
    <string name="address_field">Address Field</string>
    <string name="radio_button_field">Radio Button Field</string>
    <string name="dropdown_field">Dropdown Field</string>
    <string name="upgrade">Upgrade</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="users">Users</string>
    <string name="add_group">Add Group</string>
    <string name="add_task">Add Task</string>
    <string name="add_user">Add User</string>
    <string name="create_form">Create Form</string>
    <string name="form_title">Form Title</string>
    <string name="manage_groups">Manage Groups</string>
    <string name="manage_users">Manage Users</string>
    <string name="sign_in">Sign in</string>
    <string name="notifications">Notifications</string>
    <string name="change_phone_no">Change Phone No.</string>
    <string name="change_email_id">Change Email ID</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_your_new_password">Re-Enter Your New Password</string>
    <string name="enter_role_name_mandatory">Enter Role Name *</string>
    <string name="permissions_mandatory">Permissions *</string>
    <string name="enter_task_name_mandatory">Enter Task Name *</string>
    <string name="details">Details</string>
    <string name="start_date_mandatory">Start Date *</string>
    <string name="end_date_mandatory">End Date *</string>
    <string name="priority">Priority</string>
    <string name="assign_task">Assign Task</string>
    <string name="groups">Groups</string>
    <string name="enter_user_s_name_mandatory">Enter User\'s Name *</string>
    <string name="enter_phone_number_mandatory">Enter Phone Number *</string>
    <string name="enter_email_id_mandatory">Enter Email ID *</string>
    <string name="enter_password_mandatory">Enter Password *</string>
    <string name="select_user_group">Select User Group</string>
    <string name="permissions">Permissions</string>
    <string name="currently_there_are_no_responses">Currently, there are no responses</string>
    <string name="search_within_the_group">Search within the group</string>
    <string name="search_the_group">Search the group</string>
    <string name="no_group_found">No Group Found.</string>
    <string name="search_the_user_group">Search the user/group</string>
    <string name="no_user_found">No User Found.</string>
    <string name="currently_there_are_no_notifications">Currently, there are no notifications.</string>
    <string name="create_new_form">Create New Form</string>
    <string name="create_from_scratch">Create From Scratch</string>
    <string name="a_blank_slate_to_create_your_own_form">A blank slate to create your own form.</string>
    <string name="use_template">Use Template</string>
    <string name="choose_from_pre_made_forms">Choose from pre-made forms.</string>
    <string name="membership_plan">Membership Plan</string>
    <string name="description">Description</string>
    <string name="terms_and_conditions">Terms \u0026 Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="select">Select</string>
    <string name="close">Close</string>
    <string name="view_file">View File</string>
    <string name="check_your_email">Check your email</string>
    <string name="we_ve_sent_you_instructions_on_how_to_reset_the_password_also_check_the_spam_folder">We\'ve sent you instructions on how to reset the password (also check the Spam folder).</string>
    <string name="open_email_app">Open Email App</string>
    <string name="total_groups">Total Groups</string>
    <string name="total_users">Total Users</string>
    <string name="total_tasks">Total Tasks</string>
    <string name="total_forms">Total Forms</string>
    <string name="total_project">Total Project</string>
    <string name="total_action_plan">Total Action Plan</string>
    <string name="total_schedules">Total Schedule</string>
    <string name="total_budget">Total Budget</string>
    <string name="about_company">About Company</string>
    <string name="website">Website:</string>
    <string name="e_mail">E-mail:</string>
    <string name="contact">Contact:</string>
    <string name="users_colon">Users:</string>
    <string name="view_details">View Details</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email_address_and_we_will_send_you_an_otp_to_reset_your_password">Enter your email address and we will send you an OTP to reset your password.</string>
    <string name="email_address">Email Address</string>
    <string name="send_email">Send Email</string>
    <string name="search_the_form">Search the form</string>
    <string name="currently_there_are_no_forms_press_below_button_to_generate_new_form">Currently, there are no forms.\nPress below button to generate new form.</string>
    <string name="group_information">Group Information</string>
    <string name="no_data_found">No data found</string>
    <string name="group_name">Group Name</string>
    <string name="enter_4_digit_code_sent_to">Enter 4 digit code sent to:</string>
    <string name="we_ve_sent_a_4_digit_code_to_your_email_address_please_enter_the_verification_code">We\'ve sent a 4 digit code to your email address. Please enter the verification code.</string>
    <string name="reset_password">Reset Password</string>
    <string name="didn_t_receive_the_sms">Didn\'t receive the SMS?</string>
    <string name="request_new_code">Request New Code</string>
    <string name="let_s_sign_you_in">Let\'s sign you in</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back, you\'ve been missed</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register_here">Register here</string>
    <string name="let_s_register_you_in">Let\'s register you in</string>
    <string name="welcome_we_re_glad_that_you_re_joining_with_us">Welcome, we\'re glad that you\'re joining with us</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="i_have_read_and_agree_to_terms">I have read and agree to <a href="https://safra.co.mz/terms-and-conditions"><b>Terms \u0026 Conditions</b></a>.</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="task_information">Task Information</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="status">Status</string>
    <string name="assign_to">Assign To:</string>
    <string name="search_the_task">Search the task</string>
    <string name="no_tasks">No Tasks</string>
    <string name="currently_there_are_no_tasks_you_will_be_notified_when_new_task_is_assigned">Currently, there are no tasks.\nYou will be notified when new task is assigned.</string>
    <string name="select_template">Select Template</string>
    <string name="currently_there_are_no_templates">Currently, there are no templates.</string>
    <string name="user_information">User Information</string>
    <string name="user_name">User Name</string>
    <string name="phone_no">Phone No</string>
    <string name="email_id">Email ID</string>
    <string name="user_role">User Role</string>
    <string name="search_the_user">Search the user</string>
    <string name="verified">Verified</string>
    <string name="congratulations_your_phone_number_has_been_verified_your_input_has_been_accepted">Congratulations, your phone number has been verified, Your input has been accepted.</string>
    <string name="verified_continue">Continue</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="complete">Complete</string>
    <string name="completed">Completed</string>
    <string name="activate">Activate</string>
    <string name="block">Block</string>
    <string name="publish">Publish</string>
    <string name="preview">Preview</string>
    <string name="delete_group">Delete Group</string>
    <string name="remove_all_participants">Remove All\nParticipants</string>
    <string name="remove">Remove</string>
    <string name="deactivate">Deactivate</string>
    <string name="copy_link">Copy Link</string>
    <string name="view_responses">View Responses</string>
    <string name="view_response">View Response</string>
    <string name="submit_on">Submit On</string>
    <string name="language">Language</string>
    <string name="expired_on">Expired On</string>
    <string name="form_access">Form Access</string>
    <string name="view_form">View Form</string>
    <string name="edit_form">Edit Form</string>
    <string name="fill_form">Fill Form</string>
    <string name="edit_group">Edit Group</string>
    <string name="view_group">View Group</string>
    <string name="label">Label</string>
    <string name="value">Value</string>
    <string name="user_groups">User Groups</string>
    <string name="forms">Forms</string>
    <string name="tasks">Tasks</string>
    <string name="planner">Planner</string>
    <string name="project">Project</string>
    <string name="action_plan">Action Plan</string>
    <string name="schedule">Schedule</string>
    <string name="budget">Budget</string>
    <string name="health_record">Health Record</string>
    <string name="reports">Reports</string>
    <string name="logout">Logout</string>
    <string name="capture_vitals">Capture Vitals</string>
    <string name="medicine">Medicine</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="patient">Patient</string>
    <string name="action_visit">Action Visit</string>
    <string name="appointment_schedule">Appointment Schedule</string>
    <string name="allergies">Allergies</string>
</resources>